# PyLZR

./: .gitignore  PyLZR.py  PyLZRSSP.py  Qtmidi.py  README.md  README.txt  audioAnalyzer.py  audioVisualizer.py  main.py  main2.py  midi.py  midiKeyboard.py  midiKeyboard2.py  pyLzr.py  pyproject.toml  requirements.txt  run.sh  soundMode.py  soundModeClass.py  spectrumAnalyzer.py
src/pylzr/: PyLZR.py  Qtmidi.py  __init__.py  __main__.py  fftWorker.py  soundModeClass.py  textClass.py
src/pylzr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pylzr/audio/: __init__.py  audio_input.py  fft_worker.py
src/pylzr/gui/: __init__.py  main_window.py
src/pylzr/midi/: __init__.py  midi_handler.py
src/pylzr/modes/: __init__.py  sound_modes.py
src/pylzr/utils/: __init__.py
